Removed Guide from the Title.

--- a/guides/proxy-with-conditions/index.adoc
+++ b/guides/proxy-with-conditions/index.adoc
@@ -6,7 +6,7 @@
 :imagesdir: media
 :leveloffset: 1
 
-= Proxy With Conditions Quickstart Guide
+= Proxy With Conditions
 
 === Learning Objectives
 
